--- a/DockerFile
+++ b/DockerFile
@@ -1,4 +1,8 @@
-FROM python:2.7
+FROM python:2
+
+LABEL Summary="ARA records Ansible Playbook runs and provides intuitive interfaces to browse them"
+LABEL URL="https://github.com/openstack/ara"
+
 RUN apt-get update && apt-get install netcat -y
 RUN pip install pymysql
 RUN pip install git+https://git.openstack.org/openstack/ara
